resolve background issue on mobile

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
     font-family: "Pixel", Arial, sans-serif;
     color: #7c7c7c;
-    font-size: 3vw;
+    font-size: 5vw;
     text-align: center;
     justify-content: center;
     align-items: center;
